--- a/client/public/index.html
+++ b/client/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/logo192.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Delivery App Web site" />
@@ -60,7 +60,7 @@
       })(window.location);
     </script>
     <!-- End Single Page Apps for GitHub Pages -->
-    <title>DeliveryApp</title>
+    <title>Delivery App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
