--- a/client/public/index.html
+++ b/client/public/index.html
@@ -60,7 +60,7 @@
       })(window.location);
     </script>
     <!-- End Single Page Apps for GitHub Pages -->
-    <title>Delivery App</title>
+    <title>Technogroup Test App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
